syntax = "proto3";
package orderbook.api;

import "types.proto";

service Orderbook {
  rpc ListOrders(OrdersRequest) returns (OrdersResponse) {}
  rpc SubscribeOrderUpdates(OrderRequest) returns (stream OrderResponse) {}

  rpc ListTrades(TradesRequest) returns (TradesResponse) {}
  rpc SubscribeTrades(TradeRequest) returns (stream TradeResponse) {}

  rpc Spread(SpreadRequest) returns (SpreadResponse) {}
}

// Requests

message Empty {}

message SpreadRequest {
  string market_id = 1;
  optional string user_ne = 2;
}

message OrdersRequest {
  string market_id = 1;
  types.OrderType order_type = 2;
  uint64 limit = 3;
  optional string user_ne = 4;
}

message OrderRequest {
  string market_id = 1;
  optional string user = 2;
}

message TradesRequest {
  string market_id = 1;
  uint64 limit = 2;
}

message TradeRequest {
  string market_id = 1;
  optional string user = 2;
}

// Responses

message OrdersResponse {
  repeated types.Order orders = 1;
}

message OrderResponse {
  types.Order order = 1;
}

message TradesResponse {
  repeated types.Trade trades = 1;
}

message TradeResponse {
  types.Trade trade = 1;
}

message SpreadResponse {
  types.Order best_bid = 1;
  types.Order best_ask = 2;
}
